--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,7 +161,7 @@ img {
 }
 
 .navigation-user-link--btn {
-  margin-left: 20px;
+  margin-left: 24px;
   // padding: 8px 50px 8px 50px;
   background-color:  var(--reddish-brown);
   // border-radius: 4px;
@@ -201,6 +201,7 @@ img {
 }
 
 .info-title {
+  margin-top: 30px;
   // padding: 0 20px;
   padding: 0;
   font-size: 30px;
@@ -380,6 +381,7 @@ img {
 
 .hotel-search--title {
   margin-top: 0;
+  margin-bottom: 0;
   padding: 0;
   font-size: 30px;
   font-weight: 700;
